--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,4 @@
 [mypy]
 files=src/
 no_strict_optional = True
-exclude = src/[^/]+/gui/resources
+exclude = (src/[^/]+/gui/resources)|(src/[^/]+/ankiaddonconfig)
