Add general settings

--- a/src/anking_notetypes/config.json
+++ b/src/anking_notetypes/config.json
@@ -1,1 +1,1 @@
-{"AnKing": {"timer_minutes": 0, "timer_secs": 9, "toggle_all_buttons": "'", "front_tts": false, "back_tts": false, "front_signal_tag": "XXXYYYZZZ", "back_signal_tag": "XXXYYYZZZ"}, "Basic-AnKing": {"front_tts": false}, "IO-one by one": {"autoflip": true}}
+{"AnKing": {"timer_minutes": 0, "timer_secs": 9, "toggle_all_buttons": "'", "front_tts": false, "back_tts": false, "front_signal_tag": "XXXYYYZZZ", "back_signal_tag": "XXXYYYZZZ"}, "Basic-AnKing": {"front_tts": false}, "IO-one by one": {"autoflip": true}, "general": {"toggle_all_buttons": "'"}}
