Edit mypy config, type hints

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,6 @@
 [mypy]
-files=src/
+files=src
 no_strict_optional = True
-exclude = (src/[^/]+/gui/resources)|(src/[^/]+/ankiaddonconfig)
+
+[mypy-anking_notetypes.ankiaddonconfig.*]
+ignore_errors = True
