--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,3 +22,16 @@ repos:
     rev: 4.0.1
     hooks:
     -   id: flake8
+
+-   repo: https://github.com/pycqa/pylint
+    rev: v2.14.0
+    hooks:
+    - id: pylint
+      language: python
+      types: [python]
+      additional_dependencies: [aqt]
+      args:
+        [
+          "-rn", # Only display messages
+          "-sn", # Don't display the score
+        ]
