--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run mypy
         run: |
-          mypy
+          python -m mypy
 
       - name: Run tests
         run: |
